@@ -5,7 +5,6 @@ import static com.greencloud.application.yellowpages.YellowPagesService.register
 import static com.greencloud.application.yellowpages.domain.DFServiceConstants.SCHEDULER_SERVICE_NAME;
 import static com.greencloud.application.yellowpages.domain.DFServiceConstants.SCHEDULER_SERVICE_TYPE;
 
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
@@ -16,15 +15,14 @@ import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
 
 import com.greencloud.application.agents.scheduler.behaviour.df.SubscribeCloudNetworkService;
-import com.greencloud.application.agents.scheduler.behaviour.jobscheduling.handler.HandleJobAnnouncement;
-import com.greencloud.application.agents.scheduler.behaviour.jobscheduling.listener.ListenForClientJob;
-import com.greencloud.application.agents.scheduler.behaviour.jobscheduling.listener.ListenForJobUpdate;
+import com.greencloud.application.agents.scheduler.behaviour.job.scheduling.handler.HandleJobAnnouncement;
+import com.greencloud.application.agents.scheduler.behaviour.job.scheduling.listener.ListenForClientJob;
+import com.greencloud.application.agents.scheduler.behaviour.job.scheduling.listener.ListenForJobUpdate;
 import com.greencloud.application.agents.scheduler.managment.SchedulerConfigurationManagement;
 import com.greencloud.application.agents.scheduler.managment.SchedulerStateManagement;
 import com.greencloud.application.behaviours.ReceiveGUIController;
 
 import jade.core.behaviours.Behaviour;
-import jade.core.behaviours.ParallelBehaviour;
 
 /**
  * Agent representing the Scheduler Agent that orchestrate the job announcement in Cloud Network
@@ -34,7 +32,8 @@ public class SchedulerAgent extends AbstractSchedulerAgent {
 	private static final Logger logger = LoggerFactory.getLogger(SchedulerAgent.class);
 
 	/**
-	 * Method run at the agent's start. In initialize the Scheduler Agent with given parameters (initial priority weights)
+	 * Method run at the agent's start. In initialize the Scheduler Agent with given parameters
+	 * (initial priority weights)
 	 */
 	@Override
 	protected void setup() {
@@ -51,11 +50,13 @@ public class SchedulerAgent extends AbstractSchedulerAgent {
 	}
 
 	private void initializeAgent(final Object[] args) {
-		if (Objects.nonNull(args) && args.length == 3) {
+		if (Objects.nonNull(args) && args.length == 5) {
 			try {
 				final double deadlineWeight = Double.parseDouble(args[0].toString());
 				final double powerWeight = Double.parseDouble(args[1].toString());
 				final int maxQueueSize = Integer.parseInt(args[2].toString());
+				final int jobSplitThreshold = Integer.parseInt(args[3].toString());
+				final int splittingFactor = Integer.parseInt(args[4].toString());
 
 				if (deadlineWeight < 0 || powerWeight < 0
 						|| deadlineWeight > 1 || powerWeight > 1
@@ -67,7 +68,8 @@ public class SchedulerAgent extends AbstractSchedulerAgent {
 					logger.info("Incorrect arguments: Queue size must be a positive integer!");
 					doDelete();
 				}
-				this.configManagement = new SchedulerConfigurationManagement(deadlineWeight, powerWeight, maxQueueSize);
+				this.configManagement = new SchedulerConfigurationManagement(deadlineWeight, powerWeight, maxQueueSize,
+						jobSplitThreshold, splittingFactor);
 				this.stateManagement = new SchedulerStateManagement(this);
 				this.jobsToBeExecuted = new PriorityBlockingQueue<>(configManagement.getMaximumQueueSize(),
 						Comparator.comparingDouble(job -> configManagement.getJobPriority(job)));
@@ -85,11 +87,11 @@ public class SchedulerAgent extends AbstractSchedulerAgent {
 	}
 
 	private List<Behaviour> prepareBehaviours() {
-		final ParallelBehaviour parallelBehaviour = new ParallelBehaviour();
-		parallelBehaviour.addSubBehaviour(SubscribeCloudNetworkService.create(this));
-		parallelBehaviour.addSubBehaviour(new HandleJobAnnouncement(this));
-		parallelBehaviour.addSubBehaviour(new ListenForClientJob());
-		parallelBehaviour.addSubBehaviour(new ListenForJobUpdate());
-		return Collections.singletonList(parallelBehaviour);
+		return List.of(
+				SubscribeCloudNetworkService.create(this),
+				new HandleJobAnnouncement(this),
+				new ListenForClientJob(),
+				new ListenForJobUpdate()
+		);
 	}
 }
